hphp/hack/test/typecheck/inout/bad_inout_hint_return1.php
<?hh // strict

function foo(): (function(inout int): int) {
  return $x ==> 42;
}
